# NoteApp

./: .gitignore  README.md  app.js  build-frontend.bat  build-frontend.js  dev-server.js  gen_icons.py  index.html  package-lock.json  package.json  rth-host.json  style.css  vercel.json  web-storage.js
.github/workflows/: deploy.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  error.rs  gitee.rs  github.rs  main.rs  minio.rs
